# SGJW

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh
inc/: sgjw.c  sgjw.h
ref/: 红外数据文件格式.docx
src/: CMakeLists.txt  main.c
